# wet1

./: AVLtree.h  CMakeLists.txt  player.h  player_in_scoreboard.h  player_in_team.h  players.h  ready_team.h  team.h  teams.cpp  teams.h  worldcup23a1.cpp  worldcup23a1.h
wetNoClion/: AVLtree.h  player_in_team.h
